2016-03-29 <fumiyas at OSS Technology Corp., Japan>
	* smbldap-config: Add POD text
	  (Thanks to Paul Howarth <pghmcfc>, bug #3013)

2016-03-28 <fumiyas at OSS Technology Corp., Japan>
	* smbldap-config: Add support renamed and new parameters
	  (Thanks to Gervasio Susterman <gerv>, bug #2914)

2016-03-27 <fumiyas at OSS Technology Corp., Japan>
	* smbldap-useradd:
	  - Do not add dummy userPassword attribute
	  - Die on adding a user entry fails
	  - Set random password instead of insecure one on `smbpasswd -a`
	  - Check if specified UID is owned by local user (bug #2974)
	* Report error on exec() failure

2014-08-27 <fumiyas at OSS Technology Corp., Japan>
	* smbldap.conf: New parameter: lanmanPassword
	* smbldap_tools.pm: Export account_base_rid() for smbldap-usermod

2013-02-14 <fumiyas at OSS Technology Corp., Japan>
	* new tag 0.9.10

2012-10-24 <fumiyas at OSS Technology Corp., Japan>
	* smbldap_tools.pm: Add is_attr_single_value() to check if
	  a specified attribute is defined as single-value in the LDAP schema
	* smbldap-useradd, smbldap-usermod: Check if mailRoutingAddress
	  attribute is single-value or not
	* smbldap-usermod:
	  - Remove mailRoutingAddress attribute if empty
	  - Suppress "no such attribute" error on remove mail or
	    mailLocalAddress attribute when already absent

2012-10-19 <fumiyas at OSS Technology Corp., Japan>
	* smbldap_tools.pm: read_user_human_readable: Protect attribute
	  values from Encode::decode_utf8() with Encode::FB_CROAK

2012-08-07 <fumiyas at OSS Technology Corp., Japan>
	* smbldap_tools.pm: $config{masterLDAP} and $config{slaveLDAP}
	  can take an LDAP URI
	* smbldap_tools.pm: Non-root user cannot run smbldap-passwd,
	  smbldap-userinfo, smbldap-userlist and smbldap-grouplist with
	  SSL-enabled LDAP server
	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=647860
	* new tag 0.9.9

2012-07-17 <fumiyas at OSS Technology Corp., Japan>
	* smbldap-useradd: Fix smbldap-passwd name